--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_v"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
+    // Koin
+    def koin_version = '2.0.0-rc-2'
+    implementation "org.koin:koin-core:$koin_version"
+    implementation "org.koin:koin-android:$koin_version"
 }
