--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -41,13 +41,14 @@ dependencies {
 
     // RxJava 2
     def rxjava_v = "2.2.8"
-    def rxandroid_v ="2.1.1"
+    def rxandroid_v = "2.1.1"
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_v"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_v"
 
     // Retrofit
     def retrofit_v = "2.5.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_v"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_v"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_v"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
